--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,30 @@
 theme: jekyll-theme-cayman
+
+# Dependencies
+markdown:         kramdown
+highlighter:      rouge
+
+# Permalinks
+permalink:        pretty
+
+# Setup
+title:            Kaitao Qiu
+description:      'Something about Trading and CS'
+url:              https://kaitaoqiu.github.io
+baseurl:          ''
+kramdown:
+  parse_block_html: true
+
+author:
+  name:           'Kaitao Qiu'
+
+paginate:         10
+
+# Custom vars
+version:          0.1.0
+
+github:           https://github.com/KaitaoQiu
+
+plugins:
+  - jekyll-archives
+  - jekyll-seo-tag
